fix icon on mobile

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -22,7 +22,7 @@
 [type="radio"]:not(:checked) + label:before {
   content: "";
   position: absolute;
-  left: 0;
+  left: 5px;
   top: 0;
   width: 18px;
   height: 18px;
@@ -38,7 +38,7 @@
   background: black;
   position: absolute;
   top: 3px;
-  left: 3px;
+  left: 8px;
   border-radius: 100%;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
